--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html dir="{{ currentLang === 'ar' ? 'rtl' : 'ltr' }}" lang="{{ currentLang }}">
   <head>
     <meta charset="utf-8" />
     <title>AQRAB - أقربلك</title>
